--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
-/* 
 #mapzz
 {
-   height: 100vh;
-   width: 100vw; 
-} */
+   position: relative;
+} 
 *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+}
+.search{
+   width: 50%;
+   /* max-width:600px; */
+   position: fixed;
+   margin-top: 10px;
+   left:25%;
+   z-index: 999999;
+   
 }
