--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,45 @@
-#mapzz
-{
-   position: relative;
-} 
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
+#mapzz {
+  position: relative;
 }
-.search{
-   width: 50%;
-   /* max-width:600px; */
-   position: fixed;
-   margin-top: 10px;
-   left:25%;
-   z-index: 999999;
-   
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.search {
+  width: 50%;
+  /* max-width:600px; */
+  position: fixed;
+  margin-top: 10px;
+  left: 25%;
+  z-index: 999999;
+  border-radius: 50px;
+  background: #e0e0e0;
+  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
+
+.live-loc {
+  border-radius: 50%;
+  padding: 10px;
+  position: fixed;
+  top: 90%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  z-index: 9999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  border-radius: 50px;
+  border-radius: 50px;
+  border-radius: 50px;
+  border-radius: 50px;
+  border-radius: 50px;
+  background: linear-gradient(145deg, #ffffff, #dfe0e1);
+  box-shadow: 20px 20px 60px #d3d4d5, -20px -20px 60px #ffffff;
+  cursor: pointer;
+}
+
+.search-button {
+  cursor: pointer;
 }
