--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
   background: linear-gradient(145deg, #ffffff, #dfe0e1);
   box-shadow: 20px 20px 60px #d3d4d5, -20px -20px 60px #ffffff;
   cursor: pointer;
+  outline: solid 2px;
 }
 
 .search-button {
